--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ a,
 .navbar-brand {
   font-size: 48px;
   color: #fff;
-  padding-left: 55px;
+  padding-left: 0;
   position: relative;
 }
 .navbar-brand img {
